--- a/about-us.html
+++ b/about-us.html
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 col-5 text-right">
-                                <a href="#" class="btn btn-light">Contact us</a>
+                                <a href="#" class="btn btn-light">Contactanos</a>
                             </div>
                         </div>
                     </div>
