Avance en General

--- a/about-us.html
+++ b/about-us.html
@@ -216,36 +216,25 @@
                     <div class="container-fluid p-md-5 d-flex align-items-center h-100">
                         <div class="row justify-content-md-center">
                             <div class="col-md-8">
-                                <h3 class="small">J O H N D O E / C V</h3>
-                                <h1 class="  mb-5 pt-md-2 pt-sm-4">I am Experienced
-                                    <br>Web App &amp; UI Designer
+                                <h3 class="small">HEART DESINGS</h3>
+                                <h1 class="  mb-5 pt-md-2 pt-sm-4">Somos empresa líder
+                                    <br>en desarrollo de tecnologías.
                                 </h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Duis pharetra varius quam sit amet vulputate. Quisque mauris
-                                    augue, molestie tincidunt condimentum vitae, gravida a
-                                    libero. Aenean sit amet felis dolor, in sagittis nisi.
-                                    Sed ac orci quis tortor imperdiet venenatis. Duis elementum
-                                    auctor accumsan. Aliquam in felis sit amet augue.
+                                <p>Fundada como una agencia comercial de desarrollo de software, Heart Designs se convirtió rápidamente en una empresa
+                                    líder en la programación y desarrollo de nuevas tecnologías que ahora opera en la zona del bajío.
+                                    En la década de 2020, la agencia comercial original se especializó en la producción de aplicaciones web y bases de datos.
+                                    En la actualidad (2022), se pone en marcha la realización de su primer proyecto importante: Heart Life ©,
+                                    la cual se encargaría de revolucionar la forma en la que se ayuda a las personas de la tercera edad,
+                                    también personas con problemas de sobrepeso, deportistas, personas con discapacidades que necesitan
+                                    ayuda en un momento inoportuno.
                                 </p>
-                                <h5 class="">Technologies used:</h5>
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><span class="badge badge-info badge-pill">Angular</span></li>
-                                    <li class="list-inline-item"><span class="badge badge-success badge-pill">Python</span>
-                                    </li>
-                                    <li class="list-inline-item"><span class="badge badge-warning badge-pill">jQuery</span>
-                                    </li>
-                                    <li class="list-inline-item"><span class="badge badge-dark badge-pill">Webpack</span></li>
-                                    <li class="list-inline-item"><span class="badge badge-danger badge-pill">HTML/SASS</span>
-                                    </li>
-                                    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgresSQL</span>
-                                    </li>
-                                </ul>
-                                <p class="mt-md-5 mt-5 mb-5">
-                                    <a href="#" class="btn btn-dark shadow-lg">See my
-                                        portfolio</a>
-                                </p>
+
+
                             </div>
+
                             <div class="col-12 col-md-4 pt-md-5">
+                                <h5 class="">Technologies used:</h5>
+                                <br>
                                 <h5 class="mt-md-4 mb-3 small text-uppercase">Frontend</h5>
                                 <div class="progress mb-3 mt-2">
                                     <div class="progress-bar bg-dark" role="progressbar" style="width: 60%">
@@ -291,72 +280,72 @@
             <div class="row   justify-content-center    d-flex  ">
                 <div class="col-md-4 mx-auto mb-3">
                     <div class="card">
-                        <img class="card-img-top shadow" src=" https://dummyimage.com/350x350/007bff/ffffff" alt="Profile">
+                        <img class="card-img-top shadow" src=" https://user-images.githubusercontent.com/65203105/172616006-7a6fd0fc-2302-48e1-bf3c-012d1dd5ef96.jpeg" alt="Profile">
                         <div class="card-body text-center">
-                            <h4 class="card-title">John Doe</h4>
-                            <p class="card-text text-muted">UI/UX Designer</p>
+                            <h4 class="card-title">Erick Pinzón Huerta</h4>
+                            <p class="card-text text-muted">Srum Master</p>
                             <a href="#" class="social twitter m-2">
-                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-github text-danger"></i>
                             </a>
                             <a href="#" class="social facebook m-2">
-                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-facebook text-danger"></i>
                             </a>
                             <a href="#" class="social google-plus m-2">
-                                <i class="fab fa-google-plus"></i>
+                                <i class="fab fa-instagram text-danger"></i>
                             </a>
                             <a href="#" class="social linkedin m-2">
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
-                                <a href="#" class="btn btn-outline-primary">Contact me!</a>
+                                <a href="https://api.whatsapp.com/send?phone=4271635691&text=Hola%20Erick,%20como%20estas?" class="btn btn-outline-danger">Contactame!</a>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mx-auto mb-3 card">
                     <div class="card">
-                        <img class="card-img-top shadow" src=" https://dummyimage.com/350x350/007bff/ffffff" alt="Profile">
+                        <img class="card-img-top shadow" src="https://user-images.githubusercontent.com/65203105/172616017-3fbf0236-6d48-4be1-8ace-23831e5fcf2f.jpeg" alt="Profile">
                         <div class="card-body text-center">
-                            <h4 class="card-title">John Doe</h4>
-                            <p class="card-text text-muted">UI/UX Designer</p>
+                            <h4 class="card-title">Ricardo Manuel Magaña Calva</h4>
+                            <p class="card-text text-muted">Product Owner</p>
                             <a href="#" class="social twitter m-2">
-                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-github text-danger"></i>
                             </a>
                             <a href="#" class="social facebook m-2">
-                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-facebook text-danger"></i>
                             </a>
                             <a href="#" class="social google-plus m-2">
-                                <i class="fab fa-google-plus"></i>
+                                <i class="fab fa-instagram text-danger"></i>
                             </a>
                             <a href="#" class="social linkedin m-2">
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
-                                <a href="#" class="btn btn-outline-primary">Contact me!</a>
+                                <a href="https://api.whatsapp.com/send?phone=4271221773&text=Hola%20Ricardo,%20como%20estas?" class="btn btn-outline-danger">Contactame!</a>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mx-auto mb-3">
                     <div class="card">
-                        <img class="card-img-top shadow" src=" https://dummyimage.com/350x350/007bff/ffffff" alt="Profile">
+                        <img class="card-img-top shadow" src="https://user-images.githubusercontent.com/65203105/172616011-bb7952d2-0f3e-4181-8c98-db87e01ed454.jpeg" alt="Profile">
                         <div class="card-body text-center">
-                            <h4 class="card-title">John Doe</h4>
-                            <p class="card-text text-muted">UI/UX Designer</p>
+                            <h4 class="card-title">Uriel Gómez Becerril</h4>
+                            <p class="card-text text-muted">Developer</p>
                             <a href="#" class="social twitter m-2">
-                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-github text-danger"></i>
                             </a>
                             <a href="#" class="social facebook m-2">
-                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-facebook text-danger"></i>
                             </a>
                             <a href="#" class="social google-plus m-2">
-                                <i class="fab fa-google-plus"></i>
+                                <i class="fab fa-instagram text-danger"></i>
                             </a>
                             <a href="#" class="social linkedin m-2">
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
-                                <a href="#" class="btn btn-outline-primary">Contact me!</a>
+                                <a href="https://api.whatsapp.com/send?phone=4272276427&text=Hola%20Uriel,%20como%20estas?" class="btn btn-outline-danger">Contactame!</a>
                             </p>
                         </div>
                     </div>
