--- a/profile/relatives.html
+++ b/profile/relatives.html
@@ -50,7 +50,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="emergencyContacts.html">
                     <i class="fas fa-fw fa-phone"></i>
                     <span>Contactos Emergencia</span>
@@ -58,7 +58,7 @@
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="relatives.html">
                     <i class="fas fa-fw fa-user"></i>
                     <span>Familiares Cercanos</span>
@@ -169,7 +169,7 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-sm-8 text-danger">
-                                            <h2>Administrar <b>Contactos de Emergencia</b></h2>
+                                            <h2>Administrar <b>Familiares Cercanos</b></h2>
                                         </div>
                                         <div class="col-sm-4 text-right">
                                             <a href="#addModal" class="btn btn-success" data-toggle="modal" data-target="#exampleModal"><i class="material-icons"></i> <span>Agregar</span></a>
@@ -180,7 +180,7 @@
                                     <thead>
                                     <tr>
                                         <th>Nombre</th>
-                                        <th>Email</th>
+                                        <th>Parentezco</th>
                                         <th>Dirección</th>
                                         <th>Número</th>
                                         <th>Acciones</th>
@@ -189,7 +189,7 @@
                                     <tbody>
                                     <tr>
                                         <td>Thomas Hardy</td>
-                                        <td>thomashardy@mail.com</td>
+                                        <td>Father</td>
                                         <td>89 Chiaroscuro Rd, Portland, USA</td>
                                         <td>(171) 555-2222</td>
                                         <td>
@@ -199,7 +199,7 @@
                                     </tr>
                                     <tr>
                                         <td>Dominique Perrier</td>
-                                        <td>dominiqueperrier@mail.com</td>
+                                        <td>Mom</td>
                                         <td>Obere Str. 57, Berlin, Germany</td>
                                         <td>(313) 555-5735</td>
                                         <td>
@@ -209,7 +209,7 @@
                                     </tr>
                                     <tr>
                                         <td>Maria Anders</td>
-                                        <td>mariaanders@mail.com</td>
+                                        <td>Sister</td>
                                         <td>25, rue Lauriston, Paris, France</td>
                                         <td>(503) 555-9931</td>
                                         <td>
@@ -219,7 +219,7 @@
                                     </tr>
                                     <tr>
                                         <td>Fran Wilson</td>
-                                        <td>franwilson@mail.com</td>
+                                        <td>Brother</td>
                                         <td>C/ Araquil, 67, Madrid, Spain</td>
                                         <td>(204) 619-5731</td>
                                         <td>
@@ -229,7 +229,7 @@
                                     </tr>
                                     <tr>
                                         <td>Martin Blank</td>
-                                        <td>martinblank@mail.com</td>
+                                        <td>Cousin</td>
                                         <td>Via Monte Bianco 34, Turin, Italy</td>
                                         <td>(480) 631-2097</td>
                                         <td>
