--- a/profile/general.html
+++ b/profile/general.html
@@ -59,7 +59,7 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" href="relatives.html">
                     <i class="fas fa-fw fa-user"></i>
                     <span>Familiares Cercanos</span>
                 </a>
@@ -75,33 +75,17 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link">
-                    <i class="fas fa-fw fa-syringe"></i>
-                    <span>Sangre</span>
+                <a class="nav-link" href="security.html">
+                    <i class="fas fa-fw fa-lock"></i>
+                    <span>Seguridad</span>
                 </a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link">
-                    <i class="fas fa-fw fa-briefcase-medical"></i>
-                    <span>Alergias</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link">
-                    <i class="fas fa-fw fa-heartbeat"></i>
-                    <span>Familiares Cercanos</span>
-                </a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link">
-                    <i class="fas fa-fw fa-home"></i>
-                    <span>Lugar de Residencia</span>
-                </a>
+                    <i class="fas fa-fw fa-random"></i>
+                    <span>Otros</span></a>
             </li>
 
             <!-- Divider -->
@@ -293,7 +277,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </div>
+                    </div> <!-- -->
                 </div>
             </div>
             <!-- End of Content Wrapper -->
