--- a/profile/security.html
+++ b/profile/security.html
@@ -50,7 +50,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="emergencyContacts.html">
                     <i class="fas fa-fw fa-phone"></i>
                     <span>Contactos Emergencia</span>
@@ -74,7 +74,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="security.html">
                     <i class="fas fa-fw fa-lock"></i>
                     <span>Seguridad</span>
@@ -162,86 +162,68 @@
                 </nav>
                 <!-- End of Topbar -->
 
-                <div class="container">
-                    <div class="container-xl">
-                        <div class="table-responsive">
-                            <div class="table-wrapper">
-                                <div class="table-title">
-                                    <div class="row">
-                                        <div class="col-sm-8 text-danger">
-                                            <h2>Administrar <b>Contactos de Emergencia</b></h2>
-                                        </div>
-                                        <div class="col-sm-4 text-right">
-                                            <a href="#addModal" class="btn btn-success" data-toggle="modal" data-target="#exampleModal"><i class="material-icons"></i> <span>Agregar</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <table class="table table-striped table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>Nombre</th>
-                                        <th>Email</th>
-                                        <th>Dirección</th>
-                                        <th>Número</th>
-                                        <th>Acciones</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>Thomas Hardy</td>
-                                        <td>thomashardy@mail.com</td>
-                                        <td>89 Chiaroscuro Rd, Portland, USA</td>
-                                        <td>(171) 555-2222</td>
-                                        <td>
-                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
-                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Dominique Perrier</td>
-                                        <td>dominiqueperrier@mail.com</td>
-                                        <td>Obere Str. 57, Berlin, Germany</td>
-                                        <td>(313) 555-5735</td>
-                                        <td>
-                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
-                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maria Anders</td>
-                                        <td>mariaanders@mail.com</td>
-                                        <td>25, rue Lauriston, Paris, France</td>
-                                        <td>(503) 555-9931</td>
-                                        <td>
-                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
-                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fran Wilson</td>
-                                        <td>franwilson@mail.com</td>
-                                        <td>C/ Araquil, 67, Madrid, Spain</td>
-                                        <td>(204) 619-5731</td>
-                                        <td>
-                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
-                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Martin Blank</td>
-                                        <td>martinblank@mail.com</td>
-                                        <td>Via Monte Bianco 34, Turin, Italy</td>
-                                        <td>(480) 631-2097</td>
-                                        <td>
-                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
-                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                <div class="container row">
+                    <div class="col-8 container">
+                        <form>
+
+                            <div class="form-group"> <!-- Full Name -->
+                                <label for="email_id" class="control-label">Correo</label>
+                                <input type="email" class="form-control" id="email_id" name="email" placeholder="Email">
                             </div>
-                        </div>
+
+                            <div class="form-group"> <!-- Full Name -->
+                                <label for="last_name_id" class="control-label">Contraseña</label>
+                                <input type="text" class="form-control" id="last_name_id" name="last-name" placeholder="Apellidos">
+                            </div>
+
+                            <div class="form-group"> <!-- Street 1 -->
+                                <label for="street1_id" class="control-label">Repita Contraseña</label>
+                                <input type="text" class="form-control" id="street1_id" name="street1" placeholder="Calle, #, Colonia, CP">
+                            </div>
+
+                            <div class="form-group text-right"> <!-- Submit Button -->
+                                <button type="submit" class="btn btn-success">Guardar</button>
+                                <button type="reset" class="btn btn-outline-danger">Cancelar</button>
+                            </div>
+
+                        </form>
                     </div>
+                    <div class="col-4 container">
+                        <h4 class="d-flex justify-content-between align-items-center mb-3">
+                            <span class="text-danger">Recomendaciones</span>
+                            <span class="badge bg-danger rounded-pill">!</span>
+                        </h4>
+                        <ul class="list-group mb-3">
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div>
+                                    <h6 class="my-0">Utiliza datos reales</h6>
+                                    <small class="text-muted">Por tu seguridad utiliza datos reales para poder salvar
+                                        tu vida</small>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div>
+                                    <h6 class="my-0">Tus datos estan seguros</h6>
+                                    <small class="text-muted">Sabemos lo importante que son para ti tus datos privados asi que
+                                        no lo compartiremos con nadie</small>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div>
+                                    <h6 class="my-0">Actualiza tus datos</h6>
+                                    <small class="text-muted">Si has cambiado de domicilio recientemente actualiza
+                                        tus datos en cuanto antes</small>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div>
+                                    <h6 class="my-0">Verificar que se guardó</h6>
+                                    <small class="text-muted">Verifica que tus datos se hayan guardado correctamente
+                                        despues de cualquier cambio</small>
+                                </div>
+                            </li>
+                        </ul>
+                    </div> <!-- -->
                 </div>
             </div>
             <!-- End of Content Wrapper -->
