Cambio logo en La imagen principal y links de riqui

--- a/about-us.html
+++ b/about-us.html
@@ -103,7 +103,7 @@
                     <div class="container-fluid align-self-start   mt-2 mb-2">
                         <div class="row">
                             <div class="col-12 col-md-3">
-                                <img alt="image" class="d-block rounded img-fluid" src=" https://dummyimage.com/100x100/cccccc/efefef&amp;text= L O G O">
+                                <img alt="image" class="d-block rounded img-fluid" src="assets/img/Logo.png" width="40%">
                             </div>
                             <div class="col-9 d-none d-md-block text-right">
                                 <div class="row align-items-center">
@@ -124,7 +124,7 @@
                                 <h1 class="  mb-0 pt-sm-4 text-light font-weight-bold display-5">
                                     Las mejores opciones por los mejores precios</h1>
                                 <a href="buy.html" class="btn   btn-danger btn-lg mt-5">Ver mas!!
-                                    &gt;</a>
+                                    </a>
                             </div>
                         </div>
                     </div>
@@ -308,7 +308,7 @@
                         <div class="card-body text-center">
                             <h4 class="card-title">Ricardo Manuel Magaña Calva</h4>
                             <p class="card-text text-muted">Product Owner</p>
-                            <a href="#" class="social github m-2">
+                            <a href="https://github.com/Houdini23" class="social github m-2">
                                 <i class="fab fa-github text-danger"></i>
                             </a>
                             <a href="https://www.facebook.com/rikardo.mmc" class="social facebook m-2">
