--- a/profile/security.html
+++ b/profile/security.html
@@ -172,13 +172,13 @@
                             </div>
 
                             <div class="form-group"> <!-- Full Name -->
-                                <label for="last_name_id" class="control-label">Contraseña</label>
-                                <input type="text" class="form-control" id="last_name_id" name="last-name" placeholder="Apellidos">
+                                <label for="pass_id" class="control-label">Contraseña</label>
+                                <input type="password" class="form-control" id="pass_id" name="pass" placeholder="Password">
                             </div>
 
                             <div class="form-group"> <!-- Street 1 -->
-                                <label for="street1_id" class="control-label">Repita Contraseña</label>
-                                <input type="text" class="form-control" id="street1_id" name="street1" placeholder="Calle, #, Colonia, CP">
+                                <label for="passr_id" class="control-label">Repita Contraseña</label>
+                                <input type="password" class="form-control" id="passr_id" name="passr" placeholder="Repeat Password">
                             </div>
 
                             <div class="form-group text-right"> <!-- Submit Button -->
