--- a/about-us.html
+++ b/about-us.html
@@ -103,7 +103,7 @@
                     <div class="container-fluid align-self-start   mt-2 mb-2">
                         <div class="row">
                             <div class="col-12 col-md-3">
-                                <img alt="image" class="d-block rounded img-fluid" src=" https://dummyimage.com/100x100/cccccc/efefef&amp;text= L O G O">
+                                <img alt="image" class="d-block rounded img-fluid" src=" image/x-icon" href="assets/img/Logo.png">
                             </div>
                             <div class="col-9 d-none d-md-block text-right">
                                 <div class="row align-items-center">
