--- a/about-us.html
+++ b/about-us.html
@@ -103,7 +103,7 @@
                     <div class="container-fluid align-self-start   mt-2 mb-2">
                         <div class="row">
                             <div class="col-12 col-md-3">
-                                <img alt="image" class="d-block rounded img-fluid" src="assets/img/Logo.png" width="40%">
+                                <img alt="image" class="d-block rounded img-fluid" src=" image/x-icon" href="assets/img/Logo.png">
                             </div>
                             <div class="col-9 d-none d-md-block text-right">
                                 <div class="row align-items-center">
@@ -119,12 +119,12 @@
                     <div class="container-fluid align-self-center   pt-5 pt-md-1 mb-2">
                         <div class="row justify-content-center">
                             <div class="col-12 col-md-5">
-                                <h3 class="small badge badge-danger text-light">B I E N V E N I D O
+                                <h3 class="small badge badge-danger text-light">W E L C O M E
                                 </h3>
                                 <h1 class="  mb-0 pt-sm-4 text-light font-weight-bold display-5">
-                                    Las mejores opciones por los mejores precios</h1>
-                                <a href="buy.html" class="btn   btn-danger btn-lg mt-5">Ver mas!!
-                                    </a>
+                                    Here is goes cover nice heading</h1>
+                                <a href="#" class="btn   btn-danger btn-lg mt-5">Action button
+                                    &gt;</a>
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                                 <h1 class="  mb-5 pt-md-2 pt-sm-4">Somos empresa líder
                                     <br>en desarrollo de tecnologías.
                                 </h1>
-                                <p class="text-justify">Fundada como una agencia comercial de desarrollo de software, Heart Designs se convirtió rápidamente en una empresa
+                                <p>Fundada como una agencia comercial de desarrollo de software, Heart Designs se convirtió rápidamente en una empresa
                                     líder en la programación y desarrollo de nuevas tecnologías que ahora opera en la zona del bajío.
                                     En la década de 2020, la agencia comercial original se especializó en la producción de aplicaciones web y bases de datos.
                                     En la actualidad (2022), se pone en marcha la realización de su primer proyecto importante: Heart Life ©,
@@ -284,16 +284,16 @@
                         <div class="card-body text-center">
                             <h4 class="card-title">Erick Pinzón Huerta</h4>
                             <p class="card-text text-muted">Srum Master</p>
-                            <a href="https://github.com/erickpinzon18" class="social github m-2">
+                            <a href="#" class="social twitter m-2">
                                 <i class="fab fa-github text-danger"></i>
                             </a>
-                            <a href="https://www.facebook.com/erickpinz0n" class="social facebook m-2">
+                            <a href="#" class="social facebook m-2">
                                 <i class="fab fa-facebook text-danger"></i>
                             </a>
-                            <a href="https://www.instagram.com/erick_pinz0n/" class="social instagram m-2">
+                            <a href="#" class="social google-plus m-2">
                                 <i class="fab fa-instagram text-danger"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/erick-pinzon-010bb71b7/" class="social linkedin m-2">
+                            <a href="#" class="social linkedin m-2">
                                 <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
@@ -308,16 +308,16 @@
                         <div class="card-body text-center">
                             <h4 class="card-title">Ricardo Manuel Magaña Calva</h4>
                             <p class="card-text text-muted">Product Owner</p>
-                            <a href="https://github.com/Houdini23" class="social github m-2">
+                            <a href="#" class="social twitter m-2">
                                 <i class="fab fa-github text-danger"></i>
                             </a>
-                            <a href="https://www.facebook.com/rikardo.mmc" class="social facebook m-2">
+                            <a href="#" class="social facebook m-2">
                                 <i class="fab fa-facebook text-danger"></i>
                             </a>
-                            <a href="https://www.instagram.com/rick_edeem/" class="social instagram m-2">
+                            <a href="#" class="social google-plus m-2">
                                 <i class="fab fa-instagram text-danger"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/ricardo-manuel-maga%C3%B1a-calva-b7959a102/" class="social linkedin m-2">
+                            <a href="#" class="social linkedin m-2">
                                 <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
@@ -332,16 +332,16 @@
                         <div class="card-body text-center">
                             <h4 class="card-title">Uriel Gómez Becerril</h4>
                             <p class="card-text text-muted">Developer</p>
-                            <a href="https://github.com/UreckChan" class="social github m-2">
+                            <a href="#" class="social twitter m-2">
                                 <i class="fab fa-github text-danger"></i>
                             </a>
-                            <a href="https://www.facebook.com/UrielGomezYT/" class="social facebook m-2">
+                            <a href="#" class="social facebook m-2">
                                 <i class="fab fa-facebook text-danger"></i>
                             </a>
-                            <a href="https://www.instagram.com/uriel_gom3z/" class="social instagram m-2">
+                            <a href="#" class="social google-plus m-2">
                                 <i class="fab fa-instagram text-danger"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/uriel-gomez-becerril-78208123b/" class="social linkedin m-2">
+                            <a href="#" class="social linkedin m-2">
                                 <i class="fab fa-linkedin text-danger"></i>
                             </a>
                             <p class="mt-4">
